Name:                SFML
Version:             0.0.0.1
Synopsis:            Haskell bindings to the SFML library
Homepage:            https://github.com/Berengal/SFML---Haskell-bindings
License:             BSD3
License-file:        LICENSE
Author:              Sjur Gjøstein Karevoll
Maintainer:          sjurberengal@gmail.com
Category:            Game

Build-type:          Simple

Extra-source-files:  cbits/*.c

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.8

Flag hacking
  Default: False
  Description:
    Use this when you want to build an executable (hacking-sfml, Hacking.hs) containing whatever code

Library
  -- Modules exported by the library.
  Exposed-modules:     SFML.System.Internal, SFML.Window.Internal, SFML.Graphics.Internal
  
  -- Packages needed in order to build this package.
  Build-depends:       base == 4.3.1.*
                     , bytestring == 0.9.1.*
  
  -- Modules not exported by this package.
  Other-modules:       SFML.ForeignUtils

  C-sources:           cbits/VideoModeWrapper.c, cbits/WindowWrapper.c, cbits/ColorWrapper.c, cbits/FontWrapper.c

  Include-dirs:        cbits

  Includes:            VideoModeWrapper.c, WindowWrapper.c, ColorWrapper.c, FontWrapper.c

  Extra-libraries:     csfml-graphics, csfml-window, csfml-system
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools:         c2hs

Executable hacking-sfml
  if flag(hacking)
    Buildable:         True
  else
    Buildable:         False


  Main-is:             Hacking.hs

  Build-depends:       SFML == 0.0.0.1
                     , base == 4.3.1.*

